[demo] add simple and complex examples

--- a/demo/public/index.html
+++ b/demo/public/index.html
@@ -5,8 +5,8 @@
     <link rel='icon' type='image/svg+xml' href="/favicon.svg">
     <meta name='viewport' content='width=device-width, initial-scale=1' />
     <meta name='theme-color' content='#000000' />
-    <meta name='description' content='An example usage of the Bolt search library.' />
-    <title>Bolt Example</title>
+    <meta name='description' content='A demo website of the Bolt search library.' />
+    <title>Bolt Demo</title>
   </head>
   <body>
     <div id='root'></div>
